--- a/app/templates/topbar.html
+++ b/app/templates/topbar.html
@@ -14,7 +14,7 @@
         </div>
         <div class="navbar-header pull-right">
           <ul class="nav pull-left" >
-            <li class="navbar-text" style="font-size: 18px;">勇者：{{ user.last_name }}ZSHOne</li>
+            <li class="navbar-text" style="font-size: 18px;">勇者：{{ user.last_name }}</li>
           </ul>
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" style="margin-left: 15px;">
             <span class="icon-bar"></span>
