add button to lite

--- a/app/templates/staff/dashboard.html
+++ b/app/templates/staff/dashboard.html
@@ -8,6 +8,7 @@
 <h1>儀表板（？）</h1>
 <input type="button" onclick="location.href='{% url "generate card" %}'" value="產生卡片" class="btn btn-primary"/>
 <input type="button" onclick="location.href='{% url "fast send" %}'" value="快速發送" class="btn btn-primary"/>
+<input type="button" onclick="location.href='{% url "lite" %}'" value="簡易介面" class="btn btn-info"/>
 <h2>卡片</h2>
 <div class="panel-group"  id="accordion">
     <div class="panel panel-default">
