--- a/app/templates/staff/lite.html
+++ b/app/templates/staff/lite.html
@@ -24,5 +24,9 @@
     <a class="btn btn-primary" role="button" href='{% url 'lite' 3 %}' style="font-size:26px">-64卡</a>
 </div>
 <br>
+<div class="btn-group btn-group-justified" role="group">
+    <a class="btn btn-primary" role="button" href='{% url 'lite' 3 %}' style="font-size:26px">-64卡</a>
+</div>
+<br>
 </div>
 {% endblock %}
