--- a/app/templates/player/player.html
+++ b/app/templates/player/player.html
@@ -27,6 +27,7 @@ var counter = 0;
 </script>
 <div class="well">
 <h1>{{ user.player.team.name }} <span style="font-size:25px" class="badge">{{ user.player.team.points }} 點</span></h1>
+<p>（你貢獻了：{{ user.player.points_acquired }} 點）</p>
 {% if fun %}
 <div>
 <table class="table" style="font-size:16px" id="percentclac" >
@@ -41,7 +42,7 @@ var counter = 0;
   </div>
 </td>
 </tr>
-{% for each_player in sorted_players %}
+{#{% for each_player in sorted_players %}
 {% if not each_player.points_acquired == 0 %}
 <tr>
     <td>
@@ -58,12 +59,10 @@ var counter = 0;
     </td>
 </tr>
 {% endif %}
-{% endfor %}
+{% endfor %}#}
 
 </table>
 </div>
-{% else %}
-<p>（你貢獻了：{{ user.player.points_acquired }} 點）</p>
 {% endif %}
 
 {% if fun and records %}
