--- a/app/templates/staff/leaderboard.html
+++ b/app/templates/staff/leaderboard.html
@@ -1,10 +1,20 @@
 {% extends 'base.html' %}
 {% block title %}
-儀表板（？）
+點數報表
 {% endblock %}
 
-{% block content %}
-<div class="well">
-<h1>SITCON 夏令營</h1>
-</div>
+{% block body %}
+  <h1 style="padding-left: 50px">SITCON 夏令營 第一梯次 點數報表</h1>
+  <table width="100%" height="100%" class="table">
+    <tr height="100%">
+      <td width="60%">
+        <div id="graph"></div>
+      </td>
+      <td width="40%">
+        <div id="datas">
+
+        </div>
+      </td>
+    </tr>
+  </table>
 {% endblock %}
