--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,6 @@
 {% load staticfiles %}
 <!DOCTYPE html>
+<html>
   <head>
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
     <meta charset="utf-8"/>
@@ -13,8 +14,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="{% static 'css/global.css' %}" />
  </head>
+  {% block html %}
   <body>
-  {% block body %}
 
     <div id="header">
         <div class="container">
@@ -31,8 +32,8 @@
       {% endblock %}
     </div>
     <div>
-    {% endblock %}
     {# insert any js here #}
     </div>
   </body>
+    {% endblock %}
 </html>
