--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,40 +1,40 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
-    <meta charset="utf-8"/>
-    <title>{% block title %}{% endblock %} ‧ SITCON Camp 點數系統</title>
-    <meta name="description" content="SITCON Summer Camp 學生計算機夏令營點數系統。關於學生計算機年會，請前往 http://sitcon.org/，關於學生計算機夏令營，請前往 http://sitcon.camp。" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="shortcut icon" href="{% static 'img/SITCON.ico' %}" />
-    <link rel="apple-touch-icon" href="{% static 'img/apple-touch-icon.png' %}" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="{% static 'css/global.css' %}" />
- </head>
-  {% block html %}
-  <body>
-  {% block body %}
+    <head>
+        <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+        <meta charset="utf-8"/>
+        <title>{% block title %}{% endblock %} ‧ SITCON Camp 點數系統</title>
+        <meta name="description" content="SITCON Summer Camp 學生計算機夏令營點數系統。關於學生計算機年會，請前往 http://sitcon.org/，關於學生計算機夏令營，請前往 http://sitcon.camp。" />
+        <meta name="viewport" content="width=device-width" />
+        <link rel="shortcut icon" href="{% static 'img/SITCON.ico' %}" />
+        <link rel="apple-touch-icon" href="{% static 'img/apple-touch-icon.png' %}" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="{% static 'css/global.css' %}" />
+    </head>
+    {% block html %}
+    <body>
+        {% block body %}
 
-    <div id="header">
-        <div class="container">
-            {% include "topbar.html" %}
+        <div id="header">
+            <div class="container">
+                {% include "topbar.html" %}
+            </div>
         </div>
-    </div>
 
 
-    <div class="container">
-        <div class="col-lg-1"></div>
-        <div class="col-lg-10">
-        <div id="divblock">{% block content %}</div></div>
-        <div class="col-lg-1"><div>
-      {% endblock %}
-    </div>
-    <div>
-    {# insert any js here #}
-    </div>
-  </body>
+        <div class="container">
+            <div class="col-lg-1"></div>
+            <div class="col-lg-10">
+                <div id="divblock">{% block content %}{% endblock %}</div></div>
+            <div class="col-lg-1"><div>
+                </div>
+                <div>
+                    {# insert any js here #}
+                </div>
+                {% endblock %}
+    </body>
     {% endblock %}
 </html>
