--- a/app/templates/staff/leaderboard.html
+++ b/app/templates/staff/leaderboard.html
@@ -22,10 +22,10 @@
                         <ul>
                             <li>被捕獲總計：{{ totalpointsgot }}</li>
                         </ul>
-                        <li>目前領先： {{ sorted_teams.0.name }}</li>
+                        <li>目前領先： {{ sorted_teams.0.name }} {{ sorted_teams.0.points }}</li>
                         <ul>
-                            <li>第二：{{ sorted_teams.1.name }}</li>
-                            <li>第三：{{ sorted_teams.2.name }}</li>
+                            <li>第二：{{ sorted_teams.1.name }} {{ sorted_teams.1.points }}</li>
+                            <li>第三：{{ sorted_teams.2.name }} {{ sorted_teams.2.points }}</li>
                         </ul>
                     </ul>
                     <table class="table">
