added meta refresh

--- a/app/templates/staff/leaderboard.html
+++ b/app/templates/staff/leaderboard.html
@@ -6,6 +6,7 @@
 {% block html %}
 <html style="height: 100%;">
     <body style="height: 100%;overflow: hidden;">
+        <meta http-equiv="refresh" content="15">
         <h1 style="padding-left: 50px">SITCON 夏令營 第一梯次 點數報表</h1>
         <table width="100%" class="table" style="height: 100%;">
             <tr>
