--- a/app/templates/staff/leaderboard.html
+++ b/app/templates/staff/leaderboard.html
@@ -26,7 +26,7 @@
                         <li>目前領先： {{ sorted_teams.0.name }} {{ sorted_teams.0.points }}</li>
                         <ul>
                             <li>第二：{{ sorted_teams.1.name }} {{ sorted_teams.1.points }}</li>
-                            <li>第三：{{ sorted_teams.2.name }} {{ sorted_teams.2.points }}</li>
+                            <li>倒數：{{ sorted_teams.2.name }} {{ sorted_teams.-1.points }}</li>
                         </ul>
                     </ul>
                     <table class="table" style="font-size: 12px;">
