--- a/app/templates/staff/leaderboard.html
+++ b/app/templates/staff/leaderboard.html
@@ -76,7 +76,7 @@ $(document).ready(function(){
         .attr("transform", "translate(250,250)");
     //定義顏色
     var color = d3.scale.ordinal()
-              .range(["#2961fc", "#f2d33f", "#9ccf5f". "#3dc6e4", "#8096a4", "#c1628d"]);
+              .range(["#2961fc", "#f2d33f", "#9ccf5f", "#3dc6e4", "#8096a4", "#c1628d"]);
     
     //繪製圖餅圖，必備的三個：
     //d3.svg.arc()
