--- a/app/templates/card/card.html
+++ b/app/templates/card/card.html
@@ -4,69 +4,71 @@
 {% block content %}
 <div class="well">
 
-
-<h1>點數卡 <span style="font-size:18px" > 卡片名稱：{{ card.name }}</span></h1>
-<div class="panel panel-default">
-  <div class="panel-heading">
-<br>
-{% if not card.retrieved %}
-<img  style="display:block; margin:auto;" src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=https%3A%2F%2F{{ host }}{% url 'get' card.cid %}" />
-{% endif %}
-</br>
-  </div>
-<table class="table">
-<tr>
-<td>
-<p style="font-size:22px">  卡片ID： </p>
-</td>
-<td>
-<p style="font-size:22px">{{ card.cid }}</p>
-</td>
-</tr>
-<td>
-<p style="font-size:22px">  卡片價值： </p>
-</td>
-<td>
-<p style="font-size:22px">{{ card.value }} <span style="font-size:20px">點</span></p>
-</td>
-</tr>
-<tr>
-<td>
-<p style="font-size:22px"> 卡片狀態： </p>
-</td>
-<td>
-<p style="font-size:22px">
-  {% if card.active and not card.retrieved %}
-  已啟用，尚未被領取
-  {% elif not card.active and not card.retrieved %}
-  尚未啟用
-  {% else %}
-  已被 {{ card.capturer}} 領取
+  {% if permission >= 2 %}
+  {% if not card.retrieved %}
+  <a type="button" href='{% url "edit card" card.cid %}' class="btn btn-primary">編輯</a>
   {% endif %}
-</p>
-</td>
-</tr>
-<tr>
-<td>
-<p style="font-size:22px"> 卡片敘述： </p>
-</td>
-<td>
-<p style="font-size:22px">
-{% autoescape off %}<p style="font-size:22px"> {{ card.long_desc }} </p> {% endautoescape %}
-</p>
-</td>
-</tr>
-</table>
-<div class="btn-group btn-group-justified" role="group">
-  <a class="btn btn-primary" role="button" href="{% url 'home' %}" style="font-size:26px">轉身離去</a>
-</div>
-<br style="font-size:22px">
-</div>
+  <a type="button" href='{% url "feed card" card.cid %}' class="btn btn-primary">餵食</a>
+  {% endif %}
 
-{% if permission == 3 %}
-    <input type="button" onclick="location.href='{% url "edit card" card.cid %}'" value="編輯" />
-    <input type="button" onclick="location.href='{% url "feed card" card.cid %}'" value="餵給" />
-{% endif %}
+  <h1>點數卡 <span style="font-size:18px" > 卡片名稱：{{ card.name }}</span></h1>
+  <div class="panel panel-default">
+    {% if not card.retrieved %}
+    <div class="panel-heading">
+      <br>
+      <img  style="display:block; margin:auto;" src="https://api.qrserver.com/v1/create-qr-code/?size=300x300&data=https%3A%2F%2F{{ host }}{% url 'get' card.cid %}" />
+      </br>
+    </div>
+    {% endif %}
+    <table class="table">
+      <tr>
+        <td>
+          <p style="font-size:22px">  卡片ID： </p>
+        </td>
+        <td>
+          <p style="font-size:22px">{{ card.cid }}</p>
+        </td>
+      </tr>
+      <td>
+        <p style="font-size:22px">  卡片價值： </p>
+      </td>
+      <td>
+        <p style="font-size:22px">{{ card.value }} <span style="font-size:20px">點</span></p>
+      </td>
+      </tr>
+      <tr>
+        <td>
+          <p style="font-size:22px"> 卡片狀態： </p>
+        </td>
+        <td>
+          <p style="font-size:22px">
+          {% if card.active and not card.retrieved %}
+          已啟用，尚未被領取
+          {% elif not card.active and not card.retrieved %}
+          尚未啟用
+          {% else %}
+          已被 {{ card.capturer}} 領取
+          {% endif %}
+          </p>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <p style="font-size:22px"> 卡片敘述： </p>
+        </td>
+        <td>
+          <p style="font-size:22px">
+          {% autoescape off %}<p style="font-size:22px"> {{ card.long_desc }} </p> {% endautoescape %}
+          </p>
+        </td>
+      </tr>
+    </table>
+    <div class="btn-group btn-group-justified" role="group">
+      <a class="btn btn-primary" role="button" href="{% url 'home' %}" style="font-size:26px">轉身離去</a>
+    </div>
+    <br style="font-size:22px">
+  </div>
+
 
 </div>
 {% endblock %}
