--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -77,3 +77,50 @@ padding:2px 5px 2px 5px;
 
 
 }
+
+
+
+#qrcode {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    max-width: 300px;
+}
+.row-info {
+    display: flex;
+}
+
+.row-info .caption {
+    font-weight: 500;
+    text-align: right;
+    padding-right: .8em;
+    flex: 0 2 5em;
+}
+
+.row-info .content {
+    flex: 1 3 100px;
+}
+
+@media screen and (max-width: 479px) {
+    h1 small {
+        display: block;
+        margin-top: 12px;
+    }
+}
+
+.btn-leave {
+    margin-top: 1.5em;
+    margin-bottom: 2em;
+    width: 100%;
+}
+
+.button-group-oper {
+    float: right;
+    text-align: right;
+}
+.button-group-oper .btn {
+    padding: 8px 24px;
+    width: 80px;
+}
+
