--- a/app/templates/topbar.html
+++ b/app/templates/topbar.html
@@ -1,31 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <body>
-    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header pull-left">
-          <a class="navbar-brand" href=/#>SITCON 點數系統</a>
-        </div>
-        {% if request.user.is_authenticated %}
-        <div class="collapse navbar-collapse pull-right" id="navbar-collapse">
-          <ul class="nav navbar-nav" style="text-align: right;">
-            <li class="active"><a href="{% url 'logout' %}">登出</a></li>
-          </ul>
-        </div>
-        <div class="navbar-header pull-right">
-          <ul class="nav pull-left" >
-            <li class="navbar-text" style="font-size: 18px;">勇者：{{ user.last_name }}</li>
-          </ul>
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" style="margin-left: 15px;">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
-        {% endif %}
-      </div>
-    </nav>
-
-
-  </body>
-</html>
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="container">
+    <div class="navbar-header">
+      <a class="navbar-brand" href=/#>SITCON 點數系統</a>
+      {% if request.user.is_authenticated %}
+        <a href="{% url 'logout' %}" class="pull-right" id="logout-button">登出</a>
+      {% endif %}
+    </div>
+  </div>
+</nav>
