--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #f0f2f2;
-  height=100%;
+  /* background-color: #f0f2f2; */
+  /* height=100%; */
   box-shadow: 0 1px 5px #2d2d2d;
 }
 .navbar-default {
@@ -69,11 +69,76 @@ body {
 padding:2px 5px 2px 5px;
 }
 #divblock {
-  font-size: 20px;
-  margin-top: 90px;
+  /* font-size */: 20px;
+  margin-top: 50px;
   float: center;}
 #progresspercent {
   width : calc({{ each_player.points_acquired }} / {{ user.player.team.points }}  * 100%) ;
 
 
+}
+
+#qrcode {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    max-width: 300px;
+}
+.row-info {
+    display: flex;
+}
+
+.row-info .caption {
+    font-weight: 500;
+    text-align: right;
+    padding-right: .8em;
+    flex: 0 2 5em;
+}
+
+.row-info .content {
+    flex: 1 3 100px;
+}
+
+@media screen and (max-width: 479px) {
+    h1 small {
+        display: block;
+        margin-top: 12px;
+    }
+}
+
+.btn-leave {
+    margin-top: 1.5em;
+    margin-bottom: 2em;
+    width: 100%;
+}
+
+.button-group-oper {
+    float: right;
+    text-align: right;
+}
+.button-group-oper .btn {
+    padding: 8px 24px;
+    width: 80px;
+}
+
+/*  */
+
+* {
+  -webkit-overflow-scrolling: touch;
+}
+
+.container h3 {
+  margin-top: 2em;
+}
+
+#logout-button {
+  float: right;
+  padding: 15px;
+  color: #ae332e;
+  background-color: #333333;
+
+}
+#table-cards td {
+  line-height: 31px;
 }
