--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,17 +23,14 @@
         </div>
 
 
-        <div class="container">
-            <div class="col-lg-1 hidden-xs"></div>
-            <div class="col-lg-10 col-xs-12">
-                <div id="divblock">
-                    {% block content %}{% endblock %}
-                </div>
-            <div class="col-lg-1 hidden-xs"><div>
+        <!-- <div class="container"> -->
+            <div id="divblock">
+                {% block content %}{% endblock %}
+            </div>
             <div>
                 {# insert any js here #}
             </div>
-        </div>
+        <!-- </div> -->
         {% endblock %}
     </body>
     {% endblock %}
