--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #f0f2f2;
-  height=100%;
+  /* background-color: #f0f2f2; */
+  /* height=100%; */
   box-shadow: 0 1px 5px #2d2d2d;
 }
 .navbar-default {
@@ -89,8 +89,8 @@ body {
 padding:2px 5px 2px 5px;
 }
 #divblock {
-  font-size: 20px;
-  margin-top: 90px;
+  /* font-size */: 20px;
+  margin-top: 50px;
   float: center;}
 #progresspercent {
   width : calc({{ each_player.points_acquired }} / {{ user.player.team.points }}  * 100%) ;
@@ -144,3 +144,23 @@ padding:2px 5px 2px 5px;
     width: 80px;
 }
 
+/*  */
+
+* {
+  -webkit-overflow-scrolling: touch;
+}
+
+.container h3 {
+  margin-top: 2em;
+}
+
+#logout-button {
+  float: right;
+  padding: 15px;
+  color: #ae332e;
+  background-color: #333333;
+
+}
+#table-cards td {
+  line-height: 31px;
+}
