update html structures

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,12 +27,8 @@
 
 
         <!-- <div class="container"> -->
-            <div id="divblock">
-                {% block content %}{% endblock %}
-            </div>
-            <div>
-                {# insert any js here #}
-            </div>
+            <div class="container" id="divblock">{% block content %}{% endblock %}</div>
+            <div>{# insert any js here #}</div>
         <!-- </div> -->
         {% endblock %}
     </body>
